@@ -8,6 +8,7 @@ Revision history for Perl extension Text::CSV::Track, Track::Max, Track::Min.
 	- formating of csv can be defined
 	- header lines support added
 	- hash_of() added
+	- single column files tracking support
 
 0.2   Jan 02 2007
 	- typing errors in comments corrected
